--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -4,10 +4,7 @@
     box-sizing: border-box;
 }
 
-button, input{
-    border: none;
-    outline: 1px solid transparent;
-    color: inherit;
+input, button{
     font-size: inherit;
     cursor: pointer;
 }
