--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,7 +1,8 @@
-.app.dark{
+.app.dark {
     --bg-color: #14072d;
     --inverted-bg-color: #f9f9f9;
 
     --primary-color: #f9f9f9;
+    --primary-inverted-color: #14072d;
     --secondary-color: #fff;
 }
