--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,10 +1,21 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-input, button{
+ul,
+ol {
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+input,
+button {
     font-size: inherit;
     cursor: pointer;
 }
