--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,5 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap");
 :root {
-    --font-family-main: Consolas, "Times New Roman", Serif;
+    --font-family-main: Montserrat, "Times New Roman", Serif;
 
     --font-size-m: 18px;
     --font-line-m: 26px;
